                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 24-09-2004 changed: German (Austrian) language file
  - 24-09-2004 fixed: in thumbnail view the up arrow was not reachable
  - 23-09-2004 fixed: list item is not centerally aligned when TTF fonts enabled
  - 23-09-2004 fixed: song title text would overlap with the size/time when TTF fonts enabled
  - 23-09-2004 fixed: thumbnail text would overlap with other thumbnail texts when TTF fonts selected
  - 23-09-2004 fixed: slow scroll speed of RSS with TTF fonts
  - 23-09-2004 fixed: remote not working properly on main screen when TTF fonts selected
  - 23-09-2004 fixed: Crashes/Blackscreens in slideshow with large images.
  - 22-09-2004 fixed: Bookmarks failed to work if stacking was enabled and a single file video was played.
  - 21-09-2004 fixed: Album lookup would show "Unable to connect to www.allmusic.com" when actually no matching album was found on allmusic.
  - 20-09-2004 changed: Database views now show a message if the database is empty.
  - 20-09-2004 changed: Songs and Movies view renamed to Files view as it's more consistent.
  - 20-09-2004 fixed: button states in Video OSD eg. forwarding and rewinding inside and outside the osd [sf bug #997386]
  - 20-09-2004 fixed: output to all speakers with ac3 2.0, (needs new mplayer.dll)
  - 20-09-2004 fixed: [ 1026292 ] tags with blank album name would cause the display of wrong thumbnails
  - 19-09-2004 fixed: Artists/Genres with ' in their name were replaced with '' in the database views.
  - 19-09-2004 fixed: Loadfont crash when font did not exist.
  - 19-09-2004 fixed: SF bug 1030531: Crash when skin change after python is used.